--- a/src/assets/css/hero.css
+++ b/src/assets/css/hero.css
@@ -15,7 +15,7 @@
 }
 
 .top-left{
-    background: #026CB4;
+    background: #315AB2;
     height: 90%;
     width: 45vw;
     z-index: 2;
